# ansible-creator

./: .ansible-lint.yml  .coverage  .darglint  .flake8  .gitignore  .isort.cfg  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prekignore  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .yamllint  AGENTS.md  CHANGELOG.md  Containerfile.ansible-mcp  README.md  ansible-contents.yaml  biome.json  codecov.yml  cspell.config.yaml  demo copy.sh  demo.sh  mise.toml  mkdocs.yml  package-lock.json  package.json  pr_description.md  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  tombi.toml  tox.ini
.ansible/galaxy_cache/: api.json
.claude/: settings.local.json
.config/: constraints.txt  dictionary.txt  pydoclint-baseline.txt  requirements-dev.in  requirements-doc.txt  requirements-docs.in  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_report.md  feature_request.md  security_bug_report.md
.github/workflows/: ack.yml  push.yml  release.yml  tox.yml
.sonarlint/: connectedMode.json
docs/: agents.md  ai.md  api.md  content_creation.md  contributing.md  ee_scaffolding.md  index.md  installing.md
docs/source/: collection_creation.md  conf.py  developer_contribution.md  index.md  installation_usage.md
examples/: ee-config-example.yaml
pull/528/: comments
src/ansible_creator/: __init__.py  __main__.py  _arg_parser_custom.py  _arg_parser_migrate.py  api.py  arg_parser.py  bundles.py  cli.py  compat.py  config.py  constants.py  docs.py  exceptions.py  jinja_utils.py  logger.py  output.py  plugin.rst.j2  schema.py  templar.py  types.py  utils.py  validators.py
src/ansible_creator/actions/: create.py  init.py
src/ansible_creator/resources/ansible_project/: README.md.j2  ansible-navigator.yml.j2  ansible.cfg.j2  devfile.yaml.j2  network_playbook.yml.j2  site.yml.j2
src/ansible_creator/resources/ansible_project/.devcontainer/: devcontainer.json
src/ansible_creator/resources/ansible_project/.github/: ansible-code-bot.yml.j2
src/ansible_creator/resources/ansible_project/collections/: requirements.yml.j2
src/ansible_creator/resources/ansible_project/inventory/: hosts.yml
src/ansible_creator/resources/collection_project/: .isort.cfg.j2  .pre-commit-config.yaml.j2  CHANGELOG.rst  README.md.j2  galaxy.yml.j2  requirements.txt
src/ansible_creator/resources/collection_project/playbooks/: deploy-sample.yml
src/ansible_creator/resources/common/ai/: AGENTS.md
src/ansible_creator/resources/common/devfile/: devfile.yaml.j2
src/ansible_creator/resources/common/ee-ci/: .gitlab-ci.yml.j2
src/ansible_creator/resources/common/execution-environment/: execution-environment.yml.j2
src/ansible_creator/resources/common/gitignore/: .gitignore.j2  __meta__.yml
src/ansible_creator/resources/common/molecule_migrate/: MIGRATE_NEXT_STEPS.md.j2  SKILL.md  config.yml  converge.yml.j2  default_molecule.yml  inventory.yml  molecule.yml.j2
src/ansible_creator/resources/common/play-argspec/: argspec_validation_definition.yml.j2  argspec_validation_playbook.yml  argspec_validation_playbook.yml.j2  argspec_validation_plays.meta.yml  argspec_validation_plays.yml
src/ansible_creator/resources/execution_env_project/: .gitignore  NEXT_STEPS.md.j2  README.md  README.md.j2  execution-environment.yml.j2
src/ansible_creator/resources/new_collection/: .prettierignore.j2  README.md.j2  galaxy.yml.j2  test-requirements.txt
src/ansible_creator/resources/new_collection/changelogs/: config.yaml
src/ansible_creator/resources/new_collection/playbooks/: first_playbook_ext.yml.j2  sample_playbook_1.yml.j2  sample_playbook_2.yml.j2  update_servers.yml.j2
src/ansible_creator/resources/playbook_project/: README.md.j2  ansible-navigator.yml.j2  argspec_validation_playbook.yml.j2  argspec_validation_plays.meta.yml  argspec_validation_plays.yml  network_playbook.yml.j2  site.yml.j2
src/ansible_creator/resources/playbook_project/.github/: ansible-code-bot.yml.j2
src/ansible_creator/resources/playbook_project/inventory/: argspec_validation_inventory.yml
src/ansible_creator/scaffolders/: __init__.py  module_network_cli.py  module_network_netconf.py
src/ansible_creator/schemas/: __init__.py  content.json  manifest.json
src/ansible_creator/subcommands/: __init__.py  add.py  create.py  docs.py  init.py  migrate.py  schema.py
src/ansible_creator/template_engine/: __init__.py
src/ansible_creator/templates/.github/workflows/: test.yml.j2
tests/: __init__.py  conftest.py  defaults.py  utils.py
tests/fixtures/collection/testorg/testcol/: .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  README.md  devfile.yaml  galaxy.yml  pyproject.toml  test-requirements.txt  tox-ansible.ini
tests/fixtures/common/devfile/: devfile.yaml
tests/fixtures/common/ee-ci/: .gitlab-ci.yml  .gitlab-ci.yml.buildah-backup  .gitlab-ci.yml.j2.buildah-backup
tests/fixtures/common/execution-environment/: execution-environment.yml
tests/fixtures/project/ansible_project/: .gitignore  README.md  ansible-navigator.yml  ansible.cfg  devfile.yaml  network_playbook.yml  site.yml
tests/fixtures/project/ansible_project/inventory/: hosts  hosts.yml
tests/fixtures/project/ee_project/: NEXT_STEPS.md  README.md  execution-environment.yml
tests/fixtures/project/ee_project_gitlab/: .gitlab-ci.yml  NEXT_STEPS.md  README.md
tests/fixtures/project/playbook_project/: .gitignore  AGENTS.md  README.md  ansible-navigator.yml  ansible.cfg  argspec_validation_definition.yml  argspec_validation_playbook.yml  argspec_validation_plays.meta.yml  devfile.yaml  network_playbook.yml
tests/integration/: test_base.py  test_docs.py  test_init.py  test_lint.py  test_migrate.py  test_no_input.py  test_tox_ansible.py
tests/units/: __init__.py  conftest.py  test_add.py  test_api.py  test_argparse_help.py  test_basic.py  test_bundles.py  test_compat.py  test_init.py  test_init_ee.py  test_migrate.py  test_output.py  test_templar.py  test_utils.py
tools/: AGENTS.md
(+176 files in other folders)
