[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5" # required for "no-local-version" scheme
]

[project]
authors = [{"email" = "nchakrab@redhat.com", "name" = "Nilashish Chakarborty"}]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python',
  'Topic :: Software Development :: Code Generators',
  'Topic :: Utilities'
]
description = "A CLI tool for scaffolding Ansible Content."
dynamic = ["dependencies", "optional-dependencies", "version"]
keywords = ["ansible"]
license = {text = "Apache"}
maintainers = [{"email" = "info@ansible.com", "name" = "Ansible by Red Hat"}]
name = "ansible-creator"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ansible-creator = "ansible_creator.cli:main"

[project.urls]
changelog = "https://github.com/ansible/ansible-creator/releases"
documentation = "https://ansible.readthedocs.io/projects/creator/"
homepage = "https://github.com/ansible/ansible-creator"
repository = "https://github.com/ansible/ansible-creator"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "pragma: no cover"]
fail_under = 93
ignore_errors = true
show_missing = true
skip_covered = true
skip_empty = true
sort = "Cover"

[tool.coverage.run]
branch = false # https://github.com/nedbat/coveragepy/issues/605
concurrency = ["multiprocessing", "thread"]
omit = ["_version.py"]
parallel = true
source_pkgs = ["ansible_creator"]

[tool.mypy]
cache_dir = "./.cache/.mypy"
exclude = 'tests/fixtures'
files = ["src", "tests"]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pytest_ansible.molecule"]

[tool.pydoclint]
allow-init-docstring = true
arg-type-hints-in-docstring = false
baseline = ".config/pydoclint-baseline.txt"
check-return-types = false
exclude = '\.git|\.tox|build|out|venv'
should-declare-assert-error-if-assert-statement-exists = true
should-document-private-class-attributes = true
show-filenames-in-every-violation-message = true
skip-checking-short-docstrings = false
style = "google"

[tool.pylint]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.master]
good-names = "i,j,k,ex,Run,_,f,fh"
ignore = [
  "_version.py", # built by setuptools_scm
  "test_integration.py" # will have a pytest-ansible import error
]
jobs = 0
no-docstring-rgx = "__.*__"

[tool.pylint.messages_control]
disable = ["all", "duplicate-code", "locally-disabled", "suppressed-message", "too-few-public-methods", "too-many-instance-attributes", "unknown-option-value"]
enable = [
  "C0104", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/disallowed-name.html
  "C0117", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/unnecessary-negation.html
  "C0200", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/consider-using-enumerate.html
  "C0203", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/bad-mcs-method-argument.html
  "C0204", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/bad-mcs-classmethod-argument.html
  "C0209", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/consider-using-f-string.html
  "C0302", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/too-many-lines.html
  "C0325", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/superfluous-parens.html
  "C0327", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/mixed-line-endings.html
  "C0328", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/unexpected-line-ending-format.html
  "C0401", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/wrong-spelling-in-comment.html
  "C0402", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/wrong-spelling-in-docstring.html
  "C0403", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/invalid-characters-in-docstring.html
  "C1803", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/use-implicit-booleaness-not-comparison.html
  "C1804", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/use-implicit-booleaness-not-comparison-to-string.html
  "C1805", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/use-implicit-booleaness-not-comparison-to-zero.html
  "C2503", # https://pylint.readthedocs.io/en/stable/user_guide/messages/convention/bad-file-encoding.html
  "E0011", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unrecognized-inline-option.html
  "E0013", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-plugin-value.html
  "E0014", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-configuration-section.html
  "E0015", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unrecognized-option.html
  "E0106", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/return-arg-in-generator.html
  "E0108", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/duplicate-argument-name.html
  "E0110", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/abstract-class-instantiated.html
  "E0111", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-reversed-sequence.html
  "E0113", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-star-assignment-target.html
  "E0119", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/misplaced-format-function.html
  "E0202", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/method-hidden.html
  "E0203", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/access-member-before-definition.html
  "E0211", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/no-method-argument.html
  "E0236", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-slots-object.html
  "E0238", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-slots.html
  "E0239", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/inherit-non-class.html
  "E0240", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/inconsistent-mro.html
  "E0242", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/class-variable-slots-conflict.html
  "E0243", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-class-object.html
  "E0244", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-enum-extension.html
  "E0245", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/declare-non-slot.html
  "E0301", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/non-iterator-returned.html
  "E0306", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-repr-returned.html
  "E0307", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-str-returned.html
  "E0310", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-length-hint-returned.html
  "E0311", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-format-returned.html
  "E0312", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-getnewargs-returned.html
  "E0313", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-getnewargs-ex-returned.html
  "E0401", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/import-error.html
  "E0606", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/possibly-used-before-assignment.html
  "E0611", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/no-name-in-module.html
  "E0633", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unpacking-non-sequence.html
  "E0701", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-except-order.html
  "E0702", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/raising-bad-type.html
  "E0705", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-exception-cause.html
  "E0710", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/raising-non-exception.html
  "E0712", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/catching-non-exception.html
  "E1003", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/bad-super-call.html
  "E1101", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/no-member.html
  "E1102", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/not-callable.html
  "E1111", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/assignment-from-no-return.html
  "E1120", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/no-value-for-parameter.html
  "E1121", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/too-many-function-args.html
  "E1123", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unexpected-keyword-arg.html
  "E1124", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/redundant-keyword-arg.html
  "E1125", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/missing-kwoa.html
  "E1126", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-sequence-index.html
  "E1127", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-slice-index.html
  "E1128", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/assignment-from-none.html
  "E1129", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/not-context-manager.html
  "E1133", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/not-an-iterable.html
  "E1134", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/not-a-mapping.html
  "E1135", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unsupported-membership-test.html
  "E1136", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unsubscriptable-object.html
  "E1137", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unsupported-assignment-operation.html
  "E1138", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unsupported-delete-operation.html
  "E1139", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-metaclass.html
  "E1141", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/dict-iter-missing-items.html
  "E1143", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/unhashable-member.html
  "E1144", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-slice-step.html
  "E1200", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/logging-unsupported-format.html
  "E1201", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/logging-format-truncated.html
  "E1507", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-envvar-value.html
  "E1701", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/not-async-context-manager.html
  "E2501", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-unicode-codec.html
  "E2511", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-character-carriage-return.html
  "E3102", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/positional-only-arguments-expected.html
  "E3701", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/invalid-field-call.html
  "E4702", # https://pylint.readthedocs.io/en/stable/user_guide/messages/error/modified-iterating-dict.html
  "F0002", # https://pylint.readthedocs.io/en/stable/user_guide/messages/fatal/astroid-error.html
  "F0010", # https://pylint.readthedocs.io/en/stable/user_guide/messages/fatal/parse-error.html
  "F0011", # https://pylint.readthedocs.io/en/stable/user_guide/messages/fatal/config-parse-error.html
  "F0202", # https://pylint.readthedocs.io/en/stable/user_guide/messages/fatal/method-check-failed.html
  "I0001", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/raw-checker-failed.html
  "I0010", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/bad-inline-option.html
  "I0013", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/file-ignored.html
  "I0021", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/useless-suppression.html
  "I0022", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/deprecated-pragma.html
  "I1101", # https://pylint.readthedocs.io/en/stable/user_guide/messages/info/c-extension-no-member.html
  "R0022", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/useless-option-value.html
  "R0401", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/cyclic-import.html
  "R0901", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/too-many-ancestors.html
  "R0917", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/too-many-positional-arguments.html
  "R1706", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/consider-using-ternary.html
  "R1708", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/stop-iteration-return.html
  "R1709", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/simplify-boolean-expression.html
  "R1712", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/consider-swap-variables.html
  "R1713", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/consider-using-join.html
  "R1716", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/chained-comparison.html
  "R1726", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/simplifiable-condition.html
  "R1727", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/condition-evals-to-constant.html
  "R1736", # https://pylint.readthedocs.io/en/stable/user_guide/messages/refactor/unnecessary-list-index-lookup.html
  "W0101", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/unreachable.html
  "W0105", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/pointless-string-statement.html
  "W0124", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/confusing-with-statement.html
  "W0125", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-constant-test.html
  "W0126", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/missing-parentheses-for-call-in-test.html
  "W0128", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/redeclared-assigned-name.html
  "W0134", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/return-in-finally.html
  "W0135", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/contextmanager-generator-missing-cleanup.html
  "W0143", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/comparison-with-callable.html
  "W0201", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/attribute-defined-outside-init.html
  "W0213", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/implicit-flag-alias.html
  "W0221", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/arguments-differ.html
  "W0222", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/signature-differs.html
  "W0223", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/abstract-method.html
  "W0231", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/super-init-not-called.html
  "W0233", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/non-parent-init-called.html
  "W0236", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/invalid-overridden-method.html
  "W0237", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/arguments-renamed.html
  "W0238", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/unused-private-member.html
  "W0239", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/overridden-final-method.html
  "W0240", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/subclassed-final-class.html
  "W0244", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/redefined-slots-in-subclass.html
  "W0246", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/useless-parent-delegation.html
  "W0407", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/preferred-module.html
  "W0416", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/shadowed-import.html
  "W0601", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/global-variable-undefined.html
  "W0614", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/unused-wildcard-import.html
  "W0621", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/redefined-outer-name.html
  "W0631", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/undefined-loop-variable.html
  "W0632", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/unbalanced-tuple-unpacking.html
  "W0641", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/possibly-unused-variable.html
  "W0642", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/self-cls-assignment.html
  "W0644", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/unbalanced-dict-unpacking.html
  "W0715", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/raising-format-tuple.html
  "W0716", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/wrong-exception-operation.html
  "W1114", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/arguments-out-of-order.html
  "W1115", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/non-str-assignment-to-dunder-name.html
  "W1116", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/isinstance-second-argument-not-valid-type.html
  "W1117", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/kwarg-superseded-by-positional-arg.html
  "W1300", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/bad-format-string-key.html
  "W1306", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/missing-format-attribute.html
  "W1307", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/invalid-format-index.html
  "W1308", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/duplicate-string-formatting-argument.html
  "W1402", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/anomalous-unicode-escape-in-string.html
  "W1502", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/boolean-datetime.html
  "W1503", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/redundant-unittest-assert.html
  "W1506", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/bad-thread-instantiation.html
  "W1507", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/shallow-copy-environ.html
  "W2601", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-f-string-in-unsupported-version.html
  "W2602", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-final-decorator-in-unsupported-version.html
  "W2603", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-exception-groups-in-unsupported-version.html
  "W2604", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-generic-type-syntax-in-unsupported-version.html
  "W2605", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-assignment-expression-in-unsupported-version.html
  "W2606", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/using-positional-only-args-in-unsupported-version.html
  "W3101", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/missing-timeout.html
  "W3601", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/bad-chained-comparison.html
  "W4701", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/modified-iterating-list.html
  "W4901", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-module.html
  "W4902", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-method.html
  "W4903", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-argument.html
  "W4904", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-class.html
  "W4905", # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-decorator.html
  "W4906" # https://pylint.readthedocs.io/en/stable/user_guide/messages/warning/deprecated-attribute.html
]

[tool.pytest.ini_options]
addopts = "-ra --showlocals --durations=10"
cache_dir = "./.cache/.pytest"
junit_family = "legacy" # see https://docs.codecov.com/docs/test-analytics
norecursedirs = "tests/fixtures"
testpaths = "tests"
tmp_path_retention_policy = "failed"
verbosity_assertions = 2

[tool.ruff]
builtins = ["__"]
cache-dir = "./.cache/.ruff"
exclude = ["tests/fixtures"]
fix = true
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "COM812", # conflicts with ISC001 on format
  "ISC001" # conflicts with COM812 on format
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.isort]
known-first-party = ["src"]
lines-after-imports = 2 # Ensures consistency for cases when there's variable vs function/class definitions after imports
lines-between-types = 1 # Separate import/from with 1 line
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"_version.py" = ["SIM108"]
"src/ansible_creator/resources/collection_project/tests/**" = ["SLF001", "S101", "S602", "T201"]
"src/ansible_creator/resources/collection_project/tests/unit/__init__.py" = ["D104"]
"tests/**" = ["SLF001", "S101", "S602", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
dependencies = {file = [".config/requirements.in"]}
optional-dependencies.docs = {file = [".config/requirements-docs.in"]}
optional-dependencies.test = {file = [".config/requirements-test.in"]}

[tool.setuptools_scm]
# To prevent accidental pick of mobile version tags such 'v6'
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--long",
  "--tags",
  "--match",
  "v*.*"
]
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>\\d+[^\\+]*)(?P<suffix>.*)?$"
write_to = "src/ansible_creator/_version.py"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.uv.pip]
annotation-style = "line"
custom-compile-command = "tox run -e deps"
no-emit-package = [
  "ansible-core",
  "exceptiongroup",
  "pip",
  "resolvelib",
  "ruamel-yaml-clib",
  "tomli",
  "typing_extensions",
  "uv"
]
